fixed index spacing

--- a/app/assets/stylesheets/styles/walks_create.scss
+++ b/app/assets/stylesheets/styles/walks_create.scss
@@ -4,6 +4,7 @@
   padding: 10px;
   margin-bottom: 200px;
   font-family: gotham;
+  min-height:500px;
 }
 
 .form_field_create_walk{
